Update Talking Directly

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
       }
 
       body {
-        background-color: #A13500; /* --color-primary */
         margin: 0;
       }
       
@@ -430,7 +429,7 @@
         width: 100%;
         height: 100%;
         z-index: -1;
-        background: #3b2a1a url("/mov.png") no-repeat center center;
+        background: #3b2a1a url("mov.png") no-repeat center center;
         background-size: cover;
       }
 
@@ -773,20 +772,20 @@
     "react-pdf": "https://esm.sh/react-pdf@^8.0.0",
     "react-pdf/": "https://esm.sh/react-pdf@^8.0.0/",
     "@google/genai": "https://esm.sh/@google/genai",
-    "next/": "https://esm.sh/next@^15.5.0/",
-    "fs/": "https://esm.sh/fs@^0.0.1-security/",
-    "fs": "https://esm.sh/fs@^0.0.1-security",
-    "path": "https://esm.sh/path@^0.12.7",
-    "stream": "https://esm.sh/stream@^0.0.3",
-    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.2",
-    "bcryptjs": "https://esm.sh/bcryptjs@^3.0.2",
-    "mime-types": "https://esm.sh/mime-types@^3.0.1"
+    "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "bcryptjs": "https://aistudiocdn.com/bcryptjs@^3.0.2",
+    "jsonwebtoken": "https://aistudiocdn.com/jsonwebtoken@^9.0.2",
+    "next/": "https://aistudiocdn.com/next@^15.5.2/",
+    "fs/": "https://aistudiocdn.com/fs@^0.0.1-security/",
+    "stream": "https://aistudiocdn.com/stream@^0.0.3",
+    "mime-types": "https://aistudiocdn.com/mime-types@^3.0.1"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
