Improove PDF BG

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&family=Outfit:wght@400;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://esm.sh/react-pdf@^8.0.0/dist/esm/Page/AnnotationLayer.css" />
+    <link rel="stylesheet" href="https://esm.sh/react-pdf@^8.0.0/dist/esm/Page/TextLayer.css" />
     <style>
       :root {
         --chat-brown: #5c3a21;
