--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&family=Outfit:wght@400;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&family=Outfit:wght@400;700&family=Playfair+Display:ital,wght@0,400..000;1,400..900&display=swap" rel="stylesheet">
     <style>
       :root {
         --chat-brown: #5c3a21;
@@ -43,6 +43,8 @@
         --glow-intensity: 0.9;
         --glow-speed: 8s;
         --liquid-alpha: 0.25;
+        --bubble-red: #c90000;
+        --bubble-white: #ffffff;
       }
 
       body {
@@ -371,6 +373,20 @@
         animation: neonFloat 2s ease-in-out infinite;
       }
 
+      @keyframes neonRedFloat {
+        0%,100% { 
+          box-shadow: 0 0 10px rgba(255, 26, 26, 0.8), 0 0 20px rgba(255, 26, 26, 0.6), inset 0 0 10px rgba(255, 26, 26, 0.4);
+          transform: translateY(0); 
+        }
+        50% { 
+          box-shadow: 0 0 25px rgba(255, 26, 26, 1), 0 0 40px rgba(255, 26, 26, 0.8), inset 0 0 14px rgba(255, 26, 26, 0.5);
+          transform: translateY(-4px); 
+        }
+      }
+      .neon-red-float {
+        animation: neonRedFloat 2s ease-in-out infinite;
+      }
+
       @keyframes clickGreen {
         0%   { box-shadow: 0 0 8px rgba(255, 255, 255, 0.8), 0 0 12px rgba(255, 255, 255, 0.6), inset 0 0 8px rgba(255, 255, 255, 0.4); }
         50%  { box-shadow: 0 0 20px rgba(60, 255, 40, 1), 0 0 30px rgba(60, 255, 40, 0.8), inset 0 0 10px rgba(60, 255, 40, 0.5); }
@@ -582,6 +598,25 @@
                     0 0 18px rgba(255, 255, 255, 0.5);
       }
 
+      .red-white-btn {
+        background-color: var(--bubble-red, #c90000);
+        color: #fff;
+        font-weight: 600;
+        font-size: 1.125rem;
+        padding: 0.75rem 1.5rem;
+        border-radius: 0.5rem;
+        text-align: center;
+        box-shadow: 0 0 8px rgba(255, 255, 255, 0.6),
+                    0 0 14px rgba(255, 255, 255, 0.3);
+        transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+      }
+      .red-white-btn:hover,
+      .red-white-btn:focus-visible {
+        transform: scale(1.02);
+        box-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
+                    0 0 18px rgba(255, 255, 255, 0.5);
+      }
+
       /* === START: Booker Header Icon Glow === */
       @keyframes booker-header-glow {
         0%, 100% {
@@ -761,6 +796,196 @@
         }
       }
       /* === END: Accessibility & Reduced Motion === */
+      
+      /* === START: Liquid Melt Balloon Animation === */
+      .liquid-melt-container {
+        filter: url('#liquid-melt-filter');
+        position: absolute;
+        inset: 0;
+      }
+      .liquid-melt-container > div {
+        position: absolute;
+        will-change: transform; /* Hint for performance */
+      }
+      @keyframes move-blob-1 {
+        0%, 100% { transform: translate(-50%, -50%) translate(0, 0) scale(1.6); }
+        25% { transform: translate(-50%, -50%) translate(60px, -80px) scale(1.8); }
+        50% { transform: translate(-50%, -50%) translate(-40px, 40px) scale(1.5); }
+        75% { transform: translate(-50%, -50%) translate(20px, 100px) scale(1.9); }
+      }
+      @keyframes move-blob-2 {
+        0%, 100% { transform: translate(-50%, -50%) translate(0, 0) scale(1.3); }
+        25% { transform: translate(-50%, -50%) translate(-50px, 70px) scale(1.2); }
+        50% { transform: translate(-50%, -50%) translate(60px, -20px) scale(1.5); }
+        75% { transform: translate(-50%, -50%) translate(-30px, -50px) scale(1.3); }
+      }
+      @keyframes move-blob-3 {
+        0%, 100% { transform: translate(-50%, -50%) translate(0, 0) scale(1.4); }
+        33% { transform: translate(-50%, -50%) translate(-80px, -60px) scale(1.3); }
+        66% { transform: translate(-50%, -50%) translate(100px, 80px) scale(1.5); }
+      }
+      @keyframes move-blob-4 {
+        0% { transform: translate(-50%, -50%) scale(1); }
+        50% { transform: translate(-50%, -50%) scale(1.6) rotate(180deg); }
+        100% { transform: translate(-50%, -50%) scale(1); }
+      }
+      @keyframes click-reaction {
+        0% { transform: scale(1); filter: brightness(1); }
+        20% { transform: scale(0.9, 1.2) rotate(-2deg); filter: brightness(1.5); }
+        40% { transform: scale(1.2, 0.8) rotate(5deg); opacity: 0.8; }
+        60% { transform: scale(0.95, 1.05) rotate(-5deg); filter: brightness(1.3); }
+        80% { transform: scale(1.05, 0.95); opacity: 1; }
+        100% { transform: scale(1); filter: brightness(1); }
+      }
+      .animate-liquid-click {
+        animation: click-reaction 0.5s ease-out;
+      }
+      /* === END: Liquid Melt Balloon Animation === */
+
+      @keyframes text-liquid-glow {
+        0%, 100% {
+          text-shadow: 
+            0 0 5px var(--bubble-white), 
+            0 0 10px var(--bubble-white), 
+            0 0 15px var(--bubble-red), 
+            0 0 20px var(--bubble-red);
+          transform: scale(1);
+          opacity: 1;
+        }
+        50% {
+          text-shadow: 
+            0 0 8px var(--bubble-white), 
+            0 0 16px var(--bubble-red), 
+            0 0 24px var(--bubble-red), 
+            0 0 30px var(--bubble-red);
+          transform: scale(1.02);
+          opacity: 0.95;
+        }
+      }
+      .animate-text-liquid-glow {
+        animation: text-liquid-glow 1.2s ease-in-out infinite;
+      }
+
+      /* === START: Red Starfield Background === */
+      @keyframes star-flicker {
+        0%, 100% {
+          opacity: 1;
+          transform: scale(1);
+          box-shadow: 0 0 5px #ff0000, 0 0 10px #ff0000;
+        }
+        50% {
+          opacity: 0.5;
+          transform: scale(0.8);
+          box-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000;
+        }
+      }
+      @keyframes star-move-1 {
+        from { transform: translate(0, 0); }
+        to { transform: translate(-100vw, -100vh); }
+      }
+      @keyframes star-move-2 {
+        from { transform: translate(0, 0); }
+        to { transform: translate(100vw, -50vh); }
+      }
+      @keyframes star-move-3 {
+        from { transform: translate(0, 0); }
+        to { transform: translate(50vw, 120vh); }
+      }
+      /* === END: Red Starfield Background === */
+
+      /* === START: Trembling Button Animation === */
+      @keyframes tremble-shake {
+        0%, 100% { transform: translate(0, 0) rotate(0); }
+        10% { transform: translate(-1px, -2px) rotate(-0.8deg); }
+        20% { transform: translate(2px, 1px) rotate(0.8deg); }
+        30% { transform: translate(1px, 2px) rotate(0); }
+        40% { transform: translate(1px, -1px) rotate(0.8deg); }
+        50% { transform: translate(-1px, 2px) rotate(-0.8deg); }
+        60% { transform: translate(-3px, 1px) rotate(0); }
+        70% { transform: translate(2px, 1px) rotate(-0.8deg); }
+        80% { transform: translate(-1px, -1px) rotate(0.8deg); }
+        90% { transform: translate(2px, 2px) rotate(0); }
+      }
+      @keyframes intense-flicker {
+        0%, 100% {
+          filter: drop-shadow(0 0 10px rgba(255,255,255,0.8)) drop-shadow(0 0 20px rgba(255,255,255,0.6));
+          opacity: 1;
+        }
+        25% {
+          filter: drop-shadow(0 0 5px rgba(255,255,255,0.6)) drop-shadow(0 0 10px rgba(255,255,255,0.4));
+          opacity: 0.8;
+        }
+        50% {
+          filter: drop-shadow(0 0 15px rgba(255,255,255,1)) drop-shadow(0 0 30px rgba(255,255,255,0.8));
+          opacity: 1;
+        }
+        75% {
+          filter: drop-shadow(0 0 8px rgba(255,255,255,0.7)) drop-shadow(0 0 15px rgba(255,255,255,0.5));
+          opacity: 0.9;
+        }
+      }
+      .trembling-button {
+        animation: tremble-shake 0.3s linear infinite, intense-flicker 0.18s linear infinite;
+      }
+      /* === END: Trembling Button Animation === */
+
+      /* === START: Cadastre-se Button Animation === */
+      @keyframes cadastre-pulse-glow {
+        0%, 100% {
+          transform: translateY(0);
+          box-shadow: 0 0 8px rgba(255, 255, 255, 0.6),
+                      0 0 14px rgba(255, 255, 255, 0.3);
+        }
+        50% {
+          transform: translateY(-4px);
+          box-shadow: 0 0 16px rgba(255, 255, 255, 0.9),
+                      0 0 24px rgba(255, 255, 255, 0.5);
+        }
+      }
+
+      .animate-cadastre-glow {
+        animation: cadastre-pulse-glow 2.2s ease-in-out infinite;
+      }
+      /* === END: Cadastre-se Button Animation === */
+
+      /* === START: Dynamic Cadastre-se Button Animation === */
+      @keyframes dynamic-red-pulse {
+        0%, 100% {
+          transform: scale(1);
+          box-shadow: 0 0 8px rgba(255, 255, 255, 0.6),
+                      0 0 14px rgba(255, 255, 255, 0.3);
+        }
+        15% {
+          transform: scale(1.05);
+          box-shadow: 0 0 16px rgba(255, 255, 255, 1),
+                      0 0 25px rgba(255, 255, 255, 0.8),
+                      0 0 35px rgba(255, 163, 115, 0.5);
+        }
+        30% {
+          transform: scale(0.98);
+          box-shadow: 0 0 6px rgba(255, 255, 255, 0.5),
+                      0 0 12px rgba(255, 255, 255, 0.2);
+        }
+        50% {
+          transform: scale(1.02);
+          box-shadow: 0 0 12px rgba(255, 255, 255, 0.8),
+                      0 0 20px rgba(255, 255, 255, 0.6);
+        }
+      }
+
+      .dynamic-pulse-button {
+        animation: dynamic-red-pulse 1.8s ease-in-out infinite;
+      }
+      /* === END: Dynamic Cadastre-se Button Animation === */
+
+      /* === START: Neon Red Border for PDF Viewer === */
+      .neon-border-red {
+          border: 1px solid rgba(228, 27, 23, 0.7);
+          box-shadow: 0 0 8px rgba(228, 27, 23, 0.6),
+                      0 0 16px rgba(228, 27, 23, 0.4),
+                      inset 0 0 4px rgba(228, 27, 23, 0.5);
+      }
+      /* === END: Neon Red Border for PDF Viewer === */
     </style>
   <script type="importmap">
 {
@@ -769,6 +994,7 @@
     "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
     "react/": "https://esm.sh/react@^19.1.0/",
     "@google/genai": "https://esm.sh/@google/genai",
+    "framer-motion": "https://esm.sh/framer-motion@^11.2.12",
     "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
     "path": "https://aistudiocdn.com/path@^0.12.7",
     "bcryptjs": "https://aistudiocdn.com/bcryptjs@^3.0.2",
@@ -782,6 +1008,16 @@
 </script>
 </head>
   <body>
+    <!-- SVG Filter for Liquid/Gooey Effect -->
+    <svg style="position:absolute; width:0; height:0;">
+      <defs>
+        <filter id="liquid-melt-filter">
+          <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+          <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 20 -9" result="goo" />
+          <feBlend in="SourceGraphic" in2="goo" />
+        </filter>
+      </defs>
+    </svg>
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
   </body>
