--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         --liquid-alpha: 0.25;
         --bubble-red: #FF0000;
         --bubble-white: #ffffff;
+        --ans-ball-size: 28px;
       }
 
       body {
@@ -1586,10 +1587,8 @@
 
       .youtube-circle-container {
         position: relative;
-        width: 60%;
-        max-width: 240px;
+        width: 100%; /* Take full width of its wrapper */
         aspect-ratio: 1 / 1;
-        margin: 8px auto;
         border-radius: 50%;
         overflow: hidden;
         border: 4px solid #fff;
@@ -1789,6 +1788,180 @@
          width: 80%;
        }
       /* === END: Gamified UI === */
+
+      /* WEBP GALLERY - ADDED BY STUDIO */
+      .webp-gallery { padding: 28px 0; max-width: 1024px; margin: 0 auto; }
+      .webp-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        gap: 16px;
+      }
+      .webp-card {
+        border-radius: 8px;
+        overflow: hidden;
+        background-color: #1a1a1a;
+        min-height: 150px;
+        display: block;
+        margin: 0;
+        aspect-ratio: 16 / 9;
+        cursor: pointer;
+        outline: none;
+        transition: transform 0.25s ease, box-shadow 0.25s ease;
+      }
+      .webp-card:hover, .webp-card:focus-visible {
+        transform: scale(1.03);
+        box-shadow: 0 0 15px var(--bubble-red);
+      }
+      .webp-card img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
+      }
+      .webp-card-placeholder {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 4rem;
+        border: 2px dashed rgba(255,255,255,0.2);
+        border-radius: 8px;
+        color: rgba(255,255,255,0.5);
+      }
+
+      /* lightbox */
+      .webp-lightbox {
+        position: fixed;
+        inset: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: rgba(0,0,0,0.9);
+        backdrop-filter: blur(5px);
+        z-index: 99999;
+        cursor: pointer;
+        animation: fadeIn 0.3s ease-out;
+      }
+      .webp-lightbox img {
+        max-width: 90vw;
+        max-height: 90vh;
+        box-shadow: 0 12px 40px rgba(0,0,0,0.6);
+        border-radius: 4px;
+        animation: swoopIn 0.3s ease-out;
+      }
+
+      /* reduced motion */
+      @media (prefers-reduced-motion: reduce){
+        .webp-card:hover, .webp-card:focus-visible {
+          transform: none;
+        }
+        .webp-lightbox, .webp-lightbox img {
+          animation: none;
+        }
+      }
+      .sr-only {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        margin: -1px;
+        overflow: hidden;
+        clip: rect(0, 0, 0, 0);
+        white-space: nowrap;
+        border-width: 0;
+      }
+
+      /* === START: Ansiedade Display Balls === */
+      .ansiedade-decor-wrapper {
+        position: relative;
+        width: 60%;
+        max-width: 240px;
+        margin: 8px auto;
+      }
+      .ans-ball {
+        position: absolute;
+        width: var(--ans-ball-size, 28px);
+        height: var(--ans-ball-size, 28px);
+        border-radius: 50%;
+        background: linear-gradient(180deg, #ff4b4b, #ff1d1d);
+        box-shadow: 0 0 12px rgba(255, 40, 40, 0.85), 0 0 24px rgba(255, 80, 80, 0.28);
+        transform: translateZ(0);
+        animation: ballPulse 2.2s ease-in-out infinite;
+      }
+      .ans-ball-left {
+        left: -12px;
+        top: 20%;
+      }
+      .ans-ball-right {
+        right: -12px;
+        top: 20%;
+      }
+      @keyframes ballPulse {
+        0%, 100% {
+          transform: scale(0.96);
+          opacity: .9;
+        }
+        50% {
+          transform: scale(1.08);
+          opacity: 1;
+        }
+      }
+      @media (prefers-reduced-motion: reduce) {
+        .ans-ball {
+          animation: none;
+          transform: none;
+          opacity: 1;
+        }
+      }
+      /* === END: Ansiedade Display Balls === */
+      
+      /* === START: Social Media Fallback Card === */
+      .social-card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        padding: 1.5rem;
+        text-align: center;
+        background: #000;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 0.5rem; /* Match media-panel-netflix */
+      }
+      .social-card-link {
+        display: block;
+        width: 100%;
+        height: 100%;
+        text-decoration: none;
+      }
+      .social-avatar {
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        border: 2px solid var(--bubble-red);
+        margin-bottom: 1rem;
+        object-fit: cover;
+        box-shadow: 0 0 10px var(--bubble-red);
+      }
+      .social-meta {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .social-handle {
+        font-family: 'Press Start 2P', monospace;
+        font-size: 1.125rem; /* 18px */
+        color: #fff;
+        text-shadow: 0 0 8px var(--bubble-red);
+      }
+      .social-bio {
+        margin-top: 0.5rem;
+        font-size: 0.875rem; /* 14px */
+        color: rgba(255, 255, 255, 0.7);
+        max-width: 80%;
+      }
+      /* === END: Social Media Fallback Card === */
 
     </style>
   <script type="importmap">
