--- a/index.html
+++ b/index.html
@@ -1612,15 +1612,15 @@
 
       /* === START: LAYOUT REFINEMENTS (Homepage/Opening) === */
       .home-buttons {
-        gap: 12px;
+        gap: 18px;
       }
       .home-buttons .btn {
-        transform: scale(1.1);
-        padding: 10px 18px;
+        padding: 20px 32px;
+        /* Removed transform to improve sharpness and avoid animation conflicts */
       }
       @media (max-width: 768px) {
         .home-buttons .btn {
-          transform: scale(0.98);
+          padding: 18px 26px;
         }
       }
 
