--- a/index.html
+++ b/index.html
@@ -1478,7 +1478,18 @@
       }
       .triangle-shape {
         fill: url(#triGrad);
-        filter: drop-shadow(0 0 22px rgba(255,20,20,0.8));
+        filter: drop-shadow(0 0 12px rgba(255,20,20,0.7));
+        transition: filter 0.3s ease-in-out;
+      }
+      @media (min-width: 768px) {
+        .triangle-shape {
+          filter: drop-shadow(0 0 22px rgba(255,20,20,0.8));
+        }
+      }
+      @media (min-width: 1280px) {
+        .triangle-shape {
+          filter: drop-shadow(0 0 30px rgba(255,20,20,0.9));
+        }
       }
       body.loading .rot-triangle {
         animation: triangleSpin 900ms linear infinite;
@@ -1625,18 +1636,20 @@
       }
 
       .access-btn-red {
-        background-color: #ff1d1d;
+        background-color: #ff0000;
         color: #fff;
-        text-shadow: 0 0 8px rgba(255,255,255,0.85);
-        box-shadow: 0 0 12px rgba(255,50,50,0.9), 0 0 20px rgba(255,50,50,0.5);
+        text-shadow: 0 0 10px rgba(255, 255, 255, 0.9);
+        box-shadow: 0 0 15px rgba(255, 0, 0, 0.9), 0 0 30px rgba(255, 0, 0, 0.7), inset 0 0 8px rgba(255, 100, 100, 0.5);
         border: none;
+        transition: filter 0.2s ease-out, box-shadow 0.2s ease-out;
       }
       .access-btn-red:hover {
         filter: brightness(1.2);
+        box-shadow: 0 0 20px rgba(255, 0, 0, 1), 0 0 40px rgba(255, 0, 0, 0.8), inset 0 0 10px rgba(255, 100, 100, 0.7);
       }
 
       .first-page {
-        background-color: #3b2b1f; /* Darker brown */
+        background-color: #110808; /* Darker brown */
         position: relative;
         overflow: hidden;
         height: 100vh;
@@ -1668,16 +1681,16 @@
         height: 85%;
         max-width: 600px;
         max-height: 800px;
-        border: 2px solid rgba(255,255,255,0.2);
-        box-shadow: inset 0 0 15px rgba(255,255,255,0.1);
+        border: 2px solid rgba(255,0,0,0.2);
+        box-shadow: inset 0 0 15px rgba(255,0,0,0.1);
         pointer-events: none;
       }
       
       .arcade-frame::before, .arcade-frame::after {
         content: '';
         position: absolute;
-        background: #fff;
-        box-shadow: 0 0 4px #fff, 0 0 8px #fff, 0 0 12px #fff;
+        background: var(--bubble-red);
+        box-shadow: 0 0 6px var(--bubble-red), 0 0 12px var(--bubble-red);
         animation: flicker 1.5s infinite linear;
       }
       .arcade-frame::before { left: 0; width: 100%; height: 2px; top: 10px; }
@@ -1693,11 +1706,11 @@
         width: 30px;
         height: 30px;
         background: 
-          linear-gradient(to right, #fff 4px, transparent 4px),
-          linear-gradient(to bottom, #fff 4px, transparent 4px);
+          linear-gradient(to right, var(--bubble-red) 4px, transparent 4px),
+          linear-gradient(to bottom, var(--bubble-red) 4px, transparent 4px);
         background-repeat: repeat;
         background-size: 8px 8px; /* Pixel size */
-        filter: drop-shadow(0 0 5px #fff);
+        filter: drop-shadow(0 0 8px var(--bubble-red));
       }
       .arcade-corner.top-left { top: 0; left: 0; }
       .arcade-corner.top-right { top: 0; right: 0; transform: rotate(90deg); }
@@ -1705,12 +1718,11 @@
       .arcade-corner.bottom-right { bottom: 0; right: 0; transform: rotate(180deg); }
 
       @keyframes pixel-flicker {
-        0%, 100% { opacity: 0.5; box-shadow: 0 0 5px #fff; }
-        50% { opacity: 1; box-shadow: 0 0 12px #fff, 0 0 18px rgba(255,255,255,0.7); }
+        0%, 100% { opacity: 0.5; box-shadow: 0 0 5px currentColor; }
+        50% { opacity: 1; box-shadow: 0 0 12px currentColor, 0 0 18px currentColor; }
       }
       .pixel-particle {
         position: absolute;
-        background: #fff;
         animation: pixel-flicker infinite ease-in-out;
         z-index: 1;
       }
