--- a/index.html
+++ b/index.html
@@ -1963,87 +1963,21 @@
       /* === END: Booker Bandcamp Player === */
 
       /* === START: YouTube Neon Player === */
-      @property --angle {
-        syntax: '<angle>';
-        initial-value: 0deg;
-        inherits: false;
-      }
-
-      /* Initial fast blink animation */
-      @keyframes initial-player-flash {
-        0% { 
-          opacity: 0;
-        }
-        50% { 
-          opacity: 1; 
-          filter: drop-shadow(0 0 15px var(--bubble-red)) drop-shadow(0 0 25px var(--bubble-red)); 
-        }
-        100% { 
-          opacity: 1;
-          /* The pulse-dot-glow animation takes over the filter property after this */
-        }
-      }
-
-      /* Continuous rotation */
-      @keyframes spin-dots {
-        from { --angle: 0deg; }
-        to { --angle: 360deg; }
-      }
-
-      /* Continuous glow pulse for intensity */
-      @keyframes pulse-dot-glow {
-        0%, 100% {
-          filter: drop-shadow(0 0 4px var(--bubble-red)) drop-shadow(0 0 8px var(--bubble-red));
-        }
-        50% {
-          filter: drop-shadow(0 0 8px var(--bubble-red)) drop-shadow(0 0 16px var(--bubble-red));
-        }
-      }
-
       .youtube-player-wrapper {
         position: relative;
         width: 100%;
         /* 1:1 Aspect Ratio */
         padding-top: 100%; 
         border-radius: 50%;
-        background-color: transparent; /* Changed from #000 */
-      }
-
-      .youtube-player-wrapper::before,
-      .youtube-player-wrapper::after {
-        content: '';
-        position: absolute;
-        inset: -10px; /* Increased to make effect larger and leak */
-        border-radius: 50%;
-        background: repeating-conic-gradient(
-            from var(--angle),
-            var(--bubble-red) 0% 1%,
-            transparent 1% 6.25%
-        );
-        z-index: 1;
-      }
-
-      .youtube-player-wrapper::before {
-        animation: 
-          initial-player-flash 0.4s ease-out,
-          spin-dots 0.4s linear 0.4s infinite,
-          pulse-dot-glow 1.8s ease-in-out 0.4s infinite;
-      }
-
-      .youtube-player-wrapper::after {
-        animation:
-          initial-player-flash 0.4s ease-out,
-          spin-dots 0.6s linear reverse 0.4s infinite,
-          pulse-dot-glow 1.8s ease-in-out 0.4s infinite;
-        opacity: 0.8;
+        background-color: #000;
+        animation: neonPulse 1.5s infinite ease-in-out;
       }
 
       .youtube-player-wrapper .iframe-container {
         position: absolute;
-        inset: 2px; /* Adjusted for larger animation */
+        inset: 0;
         border-radius: 50%;
         overflow: hidden;
-        z-index: 2; /* Above the dots */
       }
 
       .youtube-player-wrapper iframe {
