--- a/index.html
+++ b/index.html
@@ -1651,6 +1651,23 @@
         filter: brightness(1.2);
         box-shadow: 0 0 20px rgba(255, 0, 0, 1), 0 0 40px rgba(255, 0, 0, 0.8), inset 0 0 10px rgba(255, 100, 100, 0.7);
       }
+      
+      .access-btn-brown {
+        background-color: #7b3f1a; /* amaraste-brown */
+        color: #fff;
+        text-shadow: 0 0 8px rgba(255, 255, 255, 0.7);
+        box-shadow: 0 0 12px rgba(212, 175, 55, 0.8), /* gold glow */
+                    0 0 24px rgba(212, 175, 55, 0.6), 
+                    inset 0 0 8px rgba(255, 200, 100, 0.4);
+        border: none;
+        transition: filter 0.2s ease-out, box-shadow 0.2s ease-out;
+      }
+      .access-btn-brown:hover {
+        filter: brightness(1.2);
+        box-shadow: 0 0 16px rgba(212, 175, 55, 1), 
+                    0 0 32px rgba(212, 175, 55, 0.8), 
+                    inset 0 0 10px rgba(255, 200, 100, 0.6);
+      }
 
       .first-page {
         background-color: #211a14;
