--- a/index.html
+++ b/index.html
@@ -1061,7 +1061,7 @@
         5% {
             opacity: 1;
             transform: scale(1.3);
-            box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #FADADD;
+            box-shadow: 0 0 15px #fff, 0 0 30px #fff, 0 0 45px #FADADD, 0 0 60px #F8AFA6;
         }
         10% {
             opacity: 0.8;
@@ -1070,7 +1070,7 @@
         }
         50% {
             opacity: 1;
-            box-shadow: 0 0 12px #fff, 0 0 24px #F8AFA6;
+            box-shadow: 0 0 18px #fff, 0 0 36px #F8AFA6;
         }
         52% {
             opacity: 0.6;
@@ -1078,7 +1078,7 @@
         }
         54% {
             opacity: 1;
-            box-shadow: 0 0 12px #fff, 0 0 24px #FADADD;
+            box-shadow: 0 0 18px #fff, 0 0 36px #FADADD, 0 0 50px #F8AFA6;
         }
         95% {
             opacity: 0.8;
@@ -1655,18 +1655,13 @@
       .access-btn-brown {
         background-color: #7b3f1a; /* amaraste-brown */
         color: #fff;
-        text-shadow: 0 0 8px rgba(255, 255, 255, 0.7);
-        box-shadow: 0 0 12px rgba(212, 175, 55, 0.8), /* gold glow */
-                    0 0 24px rgba(212, 175, 55, 0.6), 
-                    inset 0 0 8px rgba(255, 200, 100, 0.4);
+        box-shadow: inset 0 0 8px rgba(255, 200, 100, 0.4);
         border: none;
         transition: filter 0.2s ease-out, box-shadow 0.2s ease-out;
       }
       .access-btn-brown:hover {
         filter: brightness(1.2);
-        box-shadow: 0 0 16px rgba(212, 175, 55, 1), 
-                    0 0 32px rgba(212, 175, 55, 0.8), 
-                    inset 0 0 10px rgba(255, 200, 100, 0.6);
+        box-shadow: inset 0 0 10px rgba(255, 200, 100, 0.6);
       }
 
       .first-page {
