--- a/index.html
+++ b/index.html
@@ -1050,6 +1050,17 @@
                     0 0 30px var(--bubble-red),
                     inset 0 0 12px var(--bubble-red);
       }
+      .media-panel-black-theme {
+        border-color: #fff;
+        box-shadow: 0 0 10px #fff,
+                    0 0 20px #fff,
+                    inset 0 0 8px #fff;
+      }
+      .media-panel-black-theme:hover {
+        box-shadow: 0 0 15px #fff,
+                    0 0 30px #fff,
+                    inset 0 0 12px #fff;
+      }
       /* === END: Netflix-style Media Boxes === */
 
       /* === START: Booker Cosmic Background === */
@@ -1966,12 +1977,12 @@
         display: block;
         border: 0;
         width: 100%;
-        height: 380px;
+        height: 700px;
         border-radius: 0.25rem;
       }
       @media (max-width: 640px) {
         .bandcamp-container iframe {
-          height: 120px;
+          height: 450px;
         }
       }
       /* === END: Booker Bandcamp Player === */
