--- a/index.html
+++ b/index.html
@@ -876,15 +876,15 @@
       /* === START: Trembling Button Animation === */
       @keyframes tremble-shake {
         0%, 100% { transform: translate(0, 0) rotate(0); }
-        10% { transform: translate(-1px, -2px) rotate(-0.8deg); }
-        20% { transform: translate(2px, 1px) rotate(0.8deg); }
-        30% { transform: translate(1px, 2px) rotate(0); }
-        40% { transform: translate(1px, -1px) rotate(0.8deg); }
-        50% { transform: translate(-1px, 2px) rotate(-0.8deg); }
-        60% { transform: translate(-3px, 1px) rotate(0); }
-        70% { transform: translate(2px, 1px) rotate(-0.8deg); }
-        80% { transform: translate(-1px, -1px) rotate(0.8deg); }
-        90% { transform: translate(2px, 2px) rotate(0); }
+        10% { transform: translate(-0.2px, -0.4px) rotate(-0.2deg); }
+        20% { transform: translate(0.4px, 0.2px) rotate(0.2deg); }
+        30% { transform: translate(0.2px, 0.4px) rotate(0); }
+        40% { transform: translate(0.2px, -0.2px) rotate(0.2deg); }
+        50% { transform: translate(-0.2px, 0.4px) rotate(-0.2deg); }
+        60% { transform: translate(-0.4px, 0.2px) rotate(0); }
+        70% { transform: translate(0.4px, 0.2px) rotate(-0.2deg); }
+        80% { transform: translate(-0.2px, -0.2px) rotate(0.2deg); }
+        90% { transform: translate(0.4px, 0.4px) rotate(0); }
       }
       @keyframes intense-flicker {
         0%, 100% {
@@ -905,7 +905,7 @@
         }
       }
       .trembling-button {
-        animation: tremble-shake 0.3s linear infinite, intense-flicker 0.18s linear infinite;
+        animation: tremble-shake 0.8s linear infinite, intense-flicker 0.18s linear infinite;
       }
       /* === END: Trembling Button Animation === */
 
@@ -1148,6 +1148,22 @@
       }
       /* === END: Booker Grok Gold Button === */
       
+      /* === START: Booker Header Red Glow === */
+      @keyframes booker-header-glow-animation {
+        0%, 100% {
+          box-shadow: 0 0 8px rgba(255, 0, 0, 0.5), 0 0 12px rgba(255, 0, 0, 0.4), inset 0 0 3px rgba(255,100,100,0.3);
+        }
+        50% {
+          box-shadow: 0 0 12px rgba(255, 0, 0, 0.7), 0 0 22px rgba(255, 0, 0, 0.5), inset 0 0 5px rgba(255,100,100,0.5);
+        }
+      }
+      .booker-header-red-glow {
+        background-color: var(--bubble-red);
+        border-bottom: none; /* The glow provides separation */
+        animation: booker-header-glow-animation 1.5s ease-in-out infinite;
+      }
+      /* === END: Booker Header Red Glow === */
+
       /* === START: Gamified Chat Header === */
       .gamified-header-box {
         background-color: #3d2a1a; /* deep-brown variant */
