--- a/index.html
+++ b/index.html
@@ -2086,7 +2086,10 @@
     "next/": "https://aistudiocdn.com/next@^15.5.2/",
     "fs/": "https://aistudiocdn.com/fs@^0.0.1-security/",
     "stream": "https://aistudiocdn.com/stream@^0.0.3",
-    "mime-types": "https://aistudiocdn.com/mime-types@^3.0.1"
+    "mime-types": "https://aistudiocdn.com/mime-types@^3.0.1",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.2",
+    "vite": "https://aistudiocdn.com/vite@^7.1.5",
+    "src/": "https://aistudiocdn.com/src@^1.1.2/"
   }
 }
 </script>
