--- a/index.html
+++ b/index.html
@@ -390,6 +390,161 @@
         animation: neonRedFloat 2s ease-in-out infinite;
       }
 
+      /* === Amarasté Identity Window === */
+      .identity-window-wrapper {
+        position: relative;
+        z-index: 10;
+        width: min(92vw, 420px);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1.5rem;
+        text-align: center;
+      }
+
+      .identity-window {
+        width: 100%;
+        min-height: clamp(420px, 70vh, 620px);
+        padding: 2.75rem 2rem 2rem;
+        border-radius: 26px;
+        background-size: cover;
+        background-position: center top;
+        background-repeat: no-repeat;
+        position: relative;
+        overflow: hidden;
+        border: 1px solid rgba(255, 255, 255, 0.18);
+        box-shadow:
+          0 0 25px rgba(255, 0, 0, 0.45),
+          0 0 60px rgba(255, 0, 0, 0.25),
+          inset 0 0 40px rgba(0, 0, 0, 0.55);
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+      }
+
+      .identity-window::before {
+        content: '';
+        position: absolute;
+        inset: 0;
+        background: linear-gradient(
+          180deg,
+          rgba(4, 0, 0, 0.4) 0%,
+          rgba(12, 0, 0, 0.6) 30%,
+          rgba(6, 0, 0, 0.85) 100%
+        );
+        mix-blend-mode: multiply;
+      }
+
+      .identity-window::after {
+        content: '';
+        position: absolute;
+        inset: 1px;
+        border-radius: 24px;
+        border: 1px solid rgba(255, 255, 255, 0.08);
+        box-shadow: inset 0 0 25px rgba(255, 255, 255, 0.06);
+        pointer-events: none;
+      }
+
+      .identity-window__content {
+        position: relative;
+        z-index: 1;
+        width: 100%;
+        color: #fff;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.45);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+      }
+
+      .identity-window__header {
+        display: flex;
+        flex-direction: column;
+        gap: 0.35rem;
+        text-transform: uppercase;
+        letter-spacing: 0.4em;
+        font-size: 0.75rem;
+        font-weight: 600;
+        opacity: 0.9;
+      }
+
+      .identity-window__title {
+        font-family: 'Playfair Display', serif;
+        font-size: clamp(2.2rem, 6vw, 3rem);
+        letter-spacing: 0.08em;
+        text-transform: uppercase;
+      }
+
+      .identity-window__divider {
+        width: 100%;
+        max-width: 220px;
+        height: 1px;
+        background: linear-gradient(to right, transparent, rgba(255, 255, 255, 0.7), transparent);
+      }
+
+      .identity-window__description {
+        font-size: 0.95rem;
+        line-height: 1.6;
+        font-weight: 400;
+        max-width: 85%;
+        text-align: center;
+        color: rgba(255, 255, 255, 0.9);
+      }
+
+      .identity-window__signature {
+        font-size: 0.75rem;
+        letter-spacing: 0.4em;
+        text-transform: uppercase;
+        opacity: 0.75;
+      }
+
+      .identity-window__close-btn {
+        width: 100%;
+        padding: 0.95rem 1.5rem;
+        border-radius: 12px;
+        background: linear-gradient(90deg, rgba(255, 0, 0, 0.85), rgba(143, 0, 0, 0.85));
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        color: #fff;
+        font-weight: 700;
+        letter-spacing: 0.12em;
+        text-transform: uppercase;
+        transition: transform 0.2s ease, box-shadow 0.2s ease, filter 0.2s ease;
+        box-shadow: 0 10px 25px rgba(255, 0, 0, 0.35);
+        cursor: pointer;
+      }
+
+      .identity-window__close-btn:hover {
+        transform: translateY(-2px);
+        filter: brightness(1.05);
+        box-shadow: 0 14px 30px rgba(255, 0, 0, 0.45);
+      }
+
+      .identity-window__close-btn:active {
+        transform: translateY(0);
+        filter: brightness(0.95);
+      }
+
+      .identity-window__close-btn:focus-visible {
+        outline: 2px solid rgba(255, 255, 255, 0.9);
+        outline-offset: 3px;
+      }
+
+      @media (max-width: 480px) {
+        .identity-window {
+          padding: 2rem 1.4rem 1.6rem;
+          min-height: clamp(380px, 70vh, 520px);
+        }
+
+        .identity-window__description {
+          font-size: 0.85rem;
+        }
+
+        .identity-window__header {
+          letter-spacing: 0.3em;
+          font-size: 0.7rem;
+        }
+      }
+
       @keyframes clickGreen {
         0%   { box-shadow: 0 0 8px rgba(255, 255, 255, 0.8), 0 0 12px rgba(255, 255, 255, 0.6), inset 0 0 8px rgba(255, 255, 255, 0.4); }
         50%  { box-shadow: 0 0 20px rgba(60, 255, 40, 1), 0 0 30px rgba(60, 255, 40, 0.8), inset 0 0 10px rgba(60, 255, 40, 0.5); }
